<resources>
    <string name="app_name">Silicon Valley Internship</string>

    //Titles

    <string name="reason_one_title">Mobile Apps</string>
    <string name="reason_two_title">Internship</string>
    <string name="reason_three_title">Work</string>
    <string name="reason_four_title">Graduation Project</string>
    <string name="reason_five_title">iOS</string>
    <string name="reason_five_title_extra">Switching to iOS Development</string>


    //Bodies
    <string name="reason_one_description">I am passionate about mobile development and bring value
        to people"'"s lives through innovative mobile apps that build a more accessible, fair,
        creative society with unlimited opportunities for everyone.
    </string>

    <string name="reason_two_description">I had the opportunity to complete my internship in the
        Holvi "'"s mobile development team, a digital bank oriented to for freelancers and small
        business owners. It is a FinTech company with headquarters in Finland and offices in Madrid
        and Berlin. There, I learned and worked as an Android developer with an expert team applying
        Scrum methodology. \n During this time, I have been implementing new features for Holvi "'"s
        Android native app such as a QR code scanner and bar codes for invoices, as well as other
        design, development, testing, optimization and support tasks.
    </string>

    <string name="reason_three_description">I am currently working as an Android developer at
        TalentoMobile, a technology consulting company with different interesting projects in Madrid.
        So far I have been working on projects focused on the health sector, telecommunications and
        insurance companies.
    </string>

    <string name="reason_four_description">My graduation project has consisted of the development
        of an educational native Android app written in Kotlin and Java for the management of
        banking services and expense control that allows the user to learn how to manage their
        savings. For the backend of my app I used the authentication and storage services of
        Google Firebase.
    </string>

    <string name="reason_five_description">During my free time I am learning and developing my own
        projects with iOS and Swift because I love this platform and I want to become an expert on
        it.
    </string>

    //QuestionActivity
    <string name="question">What would your most preferred position be?</string>
    <string name="answer">Frontend Engineer</string>
    <string name="directions">If you want to know the reasons press the button:</string>
    <string name="see_reasons_button">See Reasons</string>

</resources>
